--- a/Vietlott/Vietlott/Base.lproj/Main.storyboard
+++ b/Vietlott/Vietlott/Base.lproj/Main.storyboard
@@ -212,7 +212,26 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="865" y="124"/>
+            <point key="canvasLocation" x="1076" y="-238"/>
+        </scene>
+        <!--Home-->
+        <scene sceneID="ktl-Jv-Rwj">
+            <objects>
+                <viewController id="NHU-LR-Wh7" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Oh0-Lg-UYR"/>
+                        <viewControllerLayoutGuide type="bottom" id="63e-C6-cUD"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="IsI-9X-mup">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Home" id="Uw2-Wu-A3i"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="d6V-TM-YvN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1076" y="448"/>
         </scene>
         <!--Edit Lottery View Controller-->
         <scene sceneID="hKx-zQ-RI1">
@@ -497,7 +516,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1535" y="124"/>
+            <point key="canvasLocation" x="1076" y="-906"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="XgV-UP-AtQ">
@@ -511,11 +530,32 @@
                     </tabBar>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="Wuc-ss-dP7"/>
+                        <segue destination="F1Z-YL-qPX" kind="relationship" relationship="viewControllers" id="BP4-0X-2AR"/>
+                        <segue destination="NHU-LR-Wh7" kind="relationship" relationship="viewControllers" id="Wa0-WK-j8u"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="usy-d0-RQa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="117.59999999999999" y="123.68815592203899"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="tVL-eN-5yk">
+            <objects>
+                <viewController id="F1Z-YL-qPX" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="xFg-He-d1p"/>
+                        <viewControllerLayoutGuide type="bottom" id="OvY-vu-s0s"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="yPe-5J-Azv">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Profile" id="qlc-mk-Qjg"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="s2u-at-Mmo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1822" y="-239"/>
         </scene>
     </scenes>
     <resources>
