--- a/Vietlott/Vietlott/Base.lproj/Main.storyboard
+++ b/Vietlott/Vietlott/Base.lproj/Main.storyboard
@@ -158,7 +158,7 @@
                                             <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
-                                            <action selector="manualInput:" destination="BYZ-38-t0r" eventType="touchUpInside" id="t2N-vM-hpO"/>
+                                            <segue destination="kcU-52-vCH" kind="presentation" identifier="manualSegue" id="c8Z-vm-fZ1"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -208,6 +208,7 @@
                     <tabBarItem key="tabBarItem" title="Input" id="8KZ-nx-8jQ"/>
                     <connections>
                         <outlet property="cameraView" destination="RLu-i6-FCe" id="8P4-iy-Rng"/>
+                        <segue destination="kcU-52-vCH" kind="presentation" identifier="inputSegue" id="v2W-T4-OiC"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -244,7 +245,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8pK-cX-zxQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="994" y="549"/>
+            <point key="canvasLocation" x="-594" y="884"/>
         </scene>
         <!--Dial-->
         <scene sceneID="ktl-Jv-Rwj">
@@ -528,7 +529,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d6V-TM-YvN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1706" y="552"/>
+            <point key="canvasLocation" x="118" y="887"/>
         </scene>
         <!--Profile-->
         <scene sceneID="Zqz-db-tfS">
@@ -670,7 +671,7 @@
                                         </constraints>
                                         <state key="normal" image="Plus Filled"/>
                                         <connections>
-                                            <action selector="showInputView:" destination="dAf-GI-zhG" eventType="touchUpInside" id="Cvy-PO-DuN"/>
+                                            <segue destination="kcU-52-vCH" kind="presentation" id="Byb-w2-6IK"/>
                                         </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XdJ-qw-jK6">
@@ -739,7 +740,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ue1-aw-ix7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1704.8" y="-167.76611694152925"/>
+            <point key="canvasLocation" x="993" y="528"/>
         </scene>
         <!--Edit Lottery View Controller-->
         <scene sceneID="hKx-zQ-RI1">
@@ -1063,7 +1064,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="994" y="-896"/>
+            <point key="canvasLocation" x="1942" y="-170"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="XgV-UP-AtQ">
@@ -1180,7 +1181,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fYK-IB-slp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2441" y="-23"/>
+            <point key="canvasLocation" x="1942" y="708"/>
         </scene>
     </scenes>
     <resources>
@@ -1198,4 +1199,7 @@
         <image name="plus" width="128" height="128"/>
         <image name="rule" width="1225" height="236"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="Byb-w2-6IK"/>
+    </inferredMetricsTieBreakers>
 </document>
