--- a/Vietlott/Vietlott/Base.lproj/Main.storyboard
+++ b/Vietlott/Vietlott/Base.lproj/Main.storyboard
@@ -1077,9 +1077,9 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="Wuc-ss-dP7"/>
-                        <segue destination="dAf-GI-zhG" kind="relationship" relationship="viewControllers" id="3kP-pM-Ifs"/>
                         <segue destination="57N-0n-sIV" kind="relationship" relationship="viewControllers" id="cqC-zF-AUv"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="cMD-DH-3MQ"/>
+                        <segue destination="dAf-GI-zhG" kind="relationship" relationship="viewControllers" id="pJV-TP-r71"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="usy-d0-RQa" userLabel="First Responder" sceneMemberID="firstResponder"/>
